# frpnow-gtk3

./: .gitignore  LICENSE  frpnow-gtk3.cabal  stack.yaml
Control/FRPNow/: GTK.hs
Control/FRPNow/GTK/: Buttons.hs  Containers.hs  Core.hs  DataWidgets.hs  Misc.hs  MissingFFI.hs  TreeView.hs
